Calling PdfPage.getPageSize method causes crash when proguard is enabled

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,19 @@ android {
         }
     }
 
+    signingConfigs {
+        release {
+            storeFile file("keystore.jks")
+            keyAlias "android"
+            keyPassword "android"
+            storePassword "android"
+        }
+    }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
